Notifications can have form values

--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -139,7 +139,10 @@ width:430px;
   opacity:1 !important;
 }
 
+.breadcrumb {
+      float: right;
+}
+
 .box-header li {
   display:inline-block;
-  float:right;
 }
