--- a/app/client/templates/field/edit/edit.html
+++ b/app/client/templates/field/edit/edit.html
@@ -4,8 +4,9 @@
         <div class="box">
           <div class="box-header with-border">
             <h3 class="box-title">Edit Field</h3>
+            <span style="float:right">{{> breadcrumb}}</span>
             {{#if (can "remove" field)}}
-              <span style="float:right">{{> breadcrumb}}{{> quickRemoveButton collection="Fields" _id=field._id class="btn btn-danger"}}</span>
+              {{> quickRemoveButton collection="Fields" _id=field._id class="btn btn-danger"}}
             {{/if}}
           </div>
           <div class="box-body table-responsive">
@@ -13,7 +14,8 @@
       {{#if (can "update" field)}}
       {{> quickForm collection="Fields" doc=field schema=schema id="editFieldForm" type="update" omitFields="createdBy" buttonContent="Update"}}
       {{/if}}
-
+      {{schema}}
+      {{field}}
       <!-- Sidebar -->
       <!--div id="split-right" class="split-right collapse" >
       <div class="right-container">
