--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -16,11 +16,11 @@
     </li>
     <li>
       {{#if canAdmin}}
-      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" type="button">Admin</button>{{/linkTo}}
+      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin</button>{{/linkTo}}
       {{/if}}
     </li>
   <li>
-      {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" type="button">New submission</button>{{/linkTo}}
+      {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
     </li>
     <li>
 
