--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -43,7 +43,7 @@
                   'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})//forceApprovalPrompt: true"><i class="fa fa-plus"></i>Sign in</a>
                 </li-->
                 <li>
-                {{> atNavButton}}
+                {{> loginButtons}}
                 </li>
               {{else}}
                 {{> loginButtons}}
