--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -1,7 +1,7 @@
 <template name="MasterLayout">
   <div class="fill">
     <div class="contain">
-      {{#AdminLTE skin=(config 'skin')}}
+      {{#AdminLTE skin=(setting "skin")}}
       <header class="main-header">
 
         <!-- Logo -->
@@ -9,7 +9,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini">MM</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>{{config 'siteName'}}</b></span>
+          <span class="logo-lg"><b>{{setting "siteName"}}</b></span>
         </a>
 
         <!-- Header Navbar -->
