Alpha leave input fields, alpha form input field, more changes and fixes

--- a/app/client/templates/form/list.html
+++ b/app/client/templates/form/list.html
@@ -20,7 +20,7 @@
           {{#linkTo route='editForm' form=this._id}}
             <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
-          {{#linkTo route='submissions'}}
+          {{#linkTo route='submissions' form=this._id}}
             <button class="btn btn-info" type="button">List Submissions</button>
           {{/linkTo}}
         </td>
