--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -20,7 +20,7 @@
       {{/if}}
     </li>
   <li>
-      {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
+      {{#linkTo route="submitForm" form=currentForm}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
     </li>
     <li>
 
