fixes to login conf

--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -43,11 +43,11 @@
                   'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})//forceApprovalPrompt: true"><i class="fa fa-plus"></i>Sign in</a>
                 </li-->
                   <li>
-                    {{#linkTo route="login"}}<a href="#" ><i class="fa fa-plus"></i>&nbsp;Sign in</a>{{/linkTo}}
+                    {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
                   </li>
               {{else}}
                 <li>
-                  {{#linkTo route="login"}}<a href="#" style="color:inherit;"><i class="fa fa-plus"></i>&nbsp;Sign in</a>{{/linkTo}}
+                  {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
                 </li>
               {{/if}}
             {{/if}}
