facebook login capabilities

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -1,4 +1,5 @@
 <template name="Home">
-  <div class="home">
-  </div>
+  {{#each widgets}}
+    {{> Template.dynamic template=type data=this}}
+  {{/each}}
 </template>
