--- a/app/client/templates/layouts/master_layout/navbar/users/navbar-users.html
+++ b/app/client/templates/layouts/master_layout/navbar/users/navbar-users.html
@@ -1,5 +1,5 @@
 <template name="navbarUsers">
-  <li class="dropdown messages-menu">
+  <!--li class="dropdown messages-menu">
     <a href="#" id="navbarUsersTrigger" data-toggle="dropdown">
       <i class="fa fa-user"></i>
     </a>
@@ -26,5 +26,5 @@
         </ul>
       </li>
     </ul>
-  </li>
+  </li-->
 </template>
