--- a/app/client/templates/layouts/master_layout/navbar/uploads/navbar-uploads.html
+++ b/app/client/templates/layouts/master_layout/navbar/uploads/navbar-uploads.html
@@ -1,5 +1,5 @@
 <template name="navbarUploads">
-  <li class="dropdown uploads-menu">
+  <li class="dropdown uploads-menu" style="display:none">
     <!-- Menu toggle button -->
     <a href="#" id="uploadsNotificationsTrigger" data-toggle="dropdown" >
       <i class="fa fa-upload"></i>
