--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -8,7 +8,7 @@
       <div class="box">
         <div class="box-header with-border">
           <h3 class="box-title">
-            Edit form
+            Edit widget
           </h3>
           <div class="box-tools">
             <span style="float: right;">{{> breadcrumb}}</span>
