--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -88,7 +88,7 @@ box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
   padding-top: 0px;
   bottom: 0px;
 }
-.skin-blue,.skin-yellow, .skin-green {
+.skin-blue,.skin-yellow, .skin-green, .skin-red {
       height: 100%;
 }
 .messages-menu .offline {
