--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -14,6 +14,7 @@
         <th>Email</th>
         <th>Status</th>
         <th>Name</th>
+        <th>Code</th>
         <th></th>
       </tr>
     </thead>
@@ -24,6 +25,7 @@
         <td>{{profile.email}}</td>
         <td>{{#if status.online}}<i class="fa fa-circle text-success"></i> Online{{else}}<i class="fa fa-circle text-warning"></i> Offline{{/if}}</td>
         <td>{{profile.name}}</td>
+        <td>{{code _id}}</td>
         {{#if isInRole 'user-admin'}}
         <td>
           {{#linkTo route='editUser'}}
