html-able site name, flip timer

--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -9,7 +9,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini">MM</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>{{setting "siteName"}}</b></span>
+          <span class="logo-lg"><b>{{{setting "siteName"}}}</b></span>
         </a>
 
         <!-- Header Navbar -->
