alpha packaging refactor complete

--- a/app/packages/pages/client/templates/home/home.html
+++ b/app/packages/pages/client/templates/home/home.html
@@ -1,5 +1,5 @@
 <template name="Home">
-  {{#each widgets}}
+  {{#each Widgets}}
     {{> Template.dynamic template=type data=this}}
   {{/each}}
 </template>
