--- a/app/packages/pages/client/templates/page/edit.html
+++ b/app/packages/pages/client/templates/page/edit.html
@@ -27,7 +27,7 @@
               </tr>
             </thead>
             <tbody>
-              {{#each widgets}}
+              {{#each Widgets}}
               <tr data-id='{{_id}}' data-listposition='{{listposition}}'>
                 <td><i class="fa fa-sort pull-right"></i></td>
                 <td>{{type}}</td>
