--- a/app/packages/pages/client/templates/page/view.html
+++ b/app/packages/pages/client/templates/page/view.html
@@ -1,5 +1,5 @@
 <template name="ViewPage">
-  {{#each widgets}}
+  {{#each Widgets}}
     {{> Template.dynamic template=type data=this}}
   {{/each}}
 </template>
