--- a/app/packages/pages/client/templates/page/insert.html
+++ b/app/packages/pages/client/templates/page/insert.html
@@ -4,7 +4,7 @@
       <h3 class="box-title">Insert page</h3>
     </div>
     <div class="box-body table-responsive">
-  {{> quickForm collection="Pages" id="insertPageForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+  {{> quickForm collection=getCol id="insertPageForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
 </div>
 </template>
