--- a/app/packages/forms/client/templates/form/edit.html
+++ b/app/packages/forms/client/templates/form/edit.html
@@ -5,14 +5,14 @@
       <h3 class="box-title">Edit form</h3>
       {{#if (can "update" form)}}
         <span style="float:right">{{> breadcrumb}}</span>
-        <span style="float:right">{{> quickRemoveButton collection="Forms" _id=form._id class="btn btn-danger"}}</span>
+        <span style="float:right">{{> quickRemoveButton collection=getCol _id=form._id class="btn btn-danger"}}</span>
 
       {{/if}}
     </div>
     <div class="box-body table-responsive">
 
   {{#if (can "update" form)}}
-    {{> quickForm collection="Forms" doc=form id="editFormForm" type="update" omitFields="createdBy" buttonContent="Update"}}
+    {{> quickForm collection=getCol doc=form id="editFormForm" type="update" omitFields="createdBy" buttonContent="Update"}}
   {{/if}}
   <hr>
   <h4>Fields</h4>
