--- a/app/packages/forms/client/templates/form/insert.html
+++ b/app/packages/forms/client/templates/form/insert.html
@@ -5,7 +5,7 @@
       <h3 class="box-title">Insert form</h3>
     </div>
     <div class="box-body table-responsive">
-      {{> quickForm collection="Forms" id="insertFormForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+      {{> quickForm collection=getCol id="insertFormForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
 </template>
