--- a/app/packages/pages/client/templates/widget/insert/insert.html
+++ b/app/packages/pages/client/templates/widget/insert/insert.html
@@ -8,7 +8,7 @@
     </div>
     <div class="box-body">
     {{#if Template.subscriptionsReady}}
-      {{> quickForm collection="Widgets" schema=schema id="insertWidgetForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+      {{> quickForm collection=getCol schema=schema id="insertWidgetForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     {{/if}}
     </div>
   </div>
