--- a/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
+++ b/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
@@ -1,4 +1,5 @@
 <template name="MasterLayout">
+  {{> chats}}
   <div class="fill">
     <div class="contain">
       {{#AdminLTE skin=(setting "skin")}}
@@ -24,7 +25,7 @@
               <!-- Messages: style can be found in dropdown.less-->
               {{#if currentUser}}
               {{> navbarUploads}}
-              <!--{{> navbarMessages}}-->
+              {{> navbarMessages}}
               <!--{{> navbarUsers}}-->
               <!-- User Account Menu -->
               <li>
@@ -135,6 +136,7 @@
 <aside class="control-sidebar control-sidebar-dark" style="display:none">
   {{> playlistplayer list=(list) global=true}}
 </aside>
+
 <!-- Main Footer -->
 {{/AdminLTE}}
 </div>
