--- a/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
+++ b/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
@@ -1,80 +1,98 @@
+<template name="loading">
+<style>
+  .loading {
+    position:fixed; width:100%;height:100%;background-color:white;z-index:1100;
+    pointer-events: none;
+  }
+  .loading #spinner {
+    top: 50%;
+    position: absolute;
+    left:50%;
+  }
+</style>
+  <div class="loading">
+    {{> spinner}}
+  </div>
+</template>
+
 <template name="MasterLayout">
-  {{> chats}}
-  <div class="fill">
-    <div class="contain">
-      {{#AdminLTE skin=(setting "skin")}}
-      <header class="main-header">
+  {{> loading}}
+    {{> chats}}
+    <div class="fill">
+      <div class="contain">
+        {{#AdminLTE skin=(setting "skin")}}
+        <header class="main-header">
 
-        <!-- Logo -->
-        <a href="index2.html" class="logo">
-          <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini">MM</span>
-          <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>{{{setting "logo"}}}</b></span>
-        </a>
-
-        <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-          <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
+          <!-- Logo -->
+          <a href="index2.html" class="logo">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <span class="logo-mini">MM</span>
+            <!-- logo for regular state and mobile devices -->
+            <span class="logo-lg"><b>{{{setting "logo"}}}</b></span>
           </a>
-          <!-- Navbar Right Menu -->
-          <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-              <!-- Messages: style can be found in dropdown.less-->
-              {{#if currentUser}}
-              {{> navbarUploads}}
-              {{> navbarMessages}}
-              <!--{{> navbarUsers}}-->
-              <!-- User Account Menu -->
+
+          <!-- Header Navbar -->
+          <nav class="navbar navbar-static-top" role="navigation">
+            <!-- Sidebar toggle button-->
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+              <span class="sr-only">Toggle navigation</span>
+            </a>
+            <!-- Navbar Right Menu -->
+            <div class="navbar-custom-menu">
+              <ul class="nav navbar-nav">
+                <!-- Messages: style can be found in dropdown.less-->
+                {{#if currentUser}}
+                {{> navbarUploads}}
+                {{> navbarMessages}}
+                <!--{{> navbarUsers}}-->
+                <!-- User Account Menu -->
+                <li>
+                  <a href="#" onclick="Meteor.logout()"><i class="fa fa-minus"></i>&nbsp;Sign out</a><!--forceApprovalPrompt: true-->
+                </li>
+                {{else}}
+                {{#if configured}}
+                <!--li>
+                <a href="#" onclick="Meteor.loginWithGoogle({requestPermissions:[
+                'https://www.googleapis.com/auth/userinfo.email',
+                'https://apps-apis.google.com/a/feeds/emailsettings/2.0/',
+                'https://www.googleapis.com/auth/drive',
+                'https://www.googleapis.com/auth/calendar',
+                'https://www.googleapis.com/auth/userinfo.profile',
+                'https://www.googleapis.com/auth/tasks',
+                'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})//forceApprovalPrompt: true"><i class="fa fa-plus"></i>Sign in</a>
+              </li-->
               <li>
-                <a href="#" onclick="Meteor.logout()"><i class="fa fa-minus"></i>&nbsp;Sign out</a><!--forceApprovalPrompt: true-->
+                {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
               </li>
               {{else}}
-              {{#if configured}}
-              <!--li>
-              <a href="#" onclick="Meteor.loginWithGoogle({requestPermissions:[
-              'https://www.googleapis.com/auth/userinfo.email',
-              'https://apps-apis.google.com/a/feeds/emailsettings/2.0/',
-              'https://www.googleapis.com/auth/drive',
-              'https://www.googleapis.com/auth/calendar',
-              'https://www.googleapis.com/auth/userinfo.profile',
-              'https://www.googleapis.com/auth/tasks',
-              'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})//forceApprovalPrompt: true"><i class="fa fa-plus"></i>Sign in</a>
-            </li-->
-            <li>
-              {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
-            </li>
-            {{else}}
-            <li>
-              {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
-            </li>
-            {{/if}}
-            {{/if}}
-            <!--li class="dropdown user user-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{{userImage}}" class="user-image" alt="User Image">
-            <span class="hidden-xs">{{userName}}</span>
-          </a>
-          <ul class="dropdown-menu">
-          <li class="user-header">
-          <img src="{{userImage}}" class="img-circle" alt="User Image">
-          <p>
-          {{userName}}
-          <small>Member since Nov. 2012</small>
-        </p>
-      </li>
-      <li class="user-body">
+              <li>
+                {{#linkTo route="login"}}<i class="fa fa-plus"></i>&nbsp;Sign in{{/linkTo}}
+              </li>
+              {{/if}}
+              {{/if}}
+              <!--li class="dropdown user user-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <img src="{{userImage}}" class="user-image" alt="User Image">
+              <span class="hidden-xs">{{userName}}</span>
+            </a>
+            <ul class="dropdown-menu">
+            <li class="user-header">
+            <img src="{{userImage}}" class="img-circle" alt="User Image">
+            <p>
+            {{userName}}
+            <small>Member since Nov. 2012</small>
+          </p>
+        </li>
+        <li class="user-body">
+        <div class="col-xs-4 text-center">
+        <a href="#">Followers</a>
+      </div>
       <div class="col-xs-4 text-center">
-      <a href="#">Followers</a>
+      <a href="#">Sales</a>
     </div>
     <div class="col-xs-4 text-center">
-    <a href="#">Sales</a>
+    <a href="#">Friends</a>
   </div>
-  <div class="col-xs-4 text-center">
-  <a href="#">Friends</a>
-</div>
 </li>
 <li class="user-footer">
 <div class="pull-left">
