set signature phone icon optional

--- a/app/packages/forms/client/templates/form/list.html
+++ b/app/packages/forms/client/templates/form/list.html
@@ -5,29 +5,15 @@
       <span style="float:right">{{#linkTo route="insertForm"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Form</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>title</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-    {{#each forms}}
-      <tr>
-        <td>{{title}}</td>
-        <td>
-          {{#linkTo route='editForm' form=this._id}}
-            <button class="btn btn-info" type="button">Edit</button>
-          {{/linkTo}}
-          {{#linkTo route='submissions' form=this._id}}
-            <button class="btn btn-info" type="button">List Submissions</button>
-          {{/linkTo}}
-        </td>
-      </tr>
-    {{/each}}
-    </tbody>
-  </table>
+      {{> reactiveTable collection=col fields=fields}}
 </div>
 </div>
+</template>
+<template name="FormsListCellButtons">
+  {{#linkTo route='editForm' form=this._id}}
+    <button class="btn btn-info" type="button">Edit</button>
+  {{/linkTo}}
+  {{#linkTo route='submissions' form=this._id}}
+    <button class="btn btn-info" type="button">List Submissions</button>
+  {{/linkTo}}
 </template>
