--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -34,6 +34,8 @@
           {{/each}}
         </tbody>
       </table>
+      {{> reactiveTable collection=col}}
+
     </div>
   </div>
 </template>
