--- a/app/packages/forms/client/templates/form/submissions/submissions.html
+++ b/app/packages/forms/client/templates/form/submissions/submissions.html
@@ -3,59 +3,27 @@
     <div class="box-header with-border">
       <h3 class="box-title">{{title}}</h3>
 
-    <ul class="box-header-list">
-      <li>
-      <form action="#" method="get" class="form" style="width:200px">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control form-search" placeholder="Search..." value="{{searchQuery}}">
-          <span class="input-group-btn">
-            <button type="submit" name="search" id="search-btn" class="btn btn-flat" ><i class="fa fa-search"></i></button>
-          </span>
-        </div>
-      </form>
-    </li>
-    <li>
-      {{#if canAdmin}}
-      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin</button>{{/linkTo}}
-      {{/if}}
-    </li>
-  <li>
-      {{#linkTo route="submitForm" form=currentForm}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
-    </li>
-    <li>
-
-      {{> breadcrumb}}
-    </li>
-  </ul>
+      <ul class="box-header-list">
+        <li>
+          {{#if canAdmin}}
+          {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin</button>{{/linkTo}}
+          {{/if}}
+        </li>
+        <li>
+          {{#linkTo route="submitForm" form=currentForm}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
+        </li>
+        <li>
+          {{> breadcrumb}}
+        </li>
+      </ul>
     </div>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          {{#each getSchema}}
-          <th>{{label .. this}}</th>
-          {{/each}}
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each items}}
-        <tr>
-          {{#each getSchema}}
-          <td>{{{cell .. this}}}</td>
-          {{/each}}
-          <td>
-            {{#linkTo route="updateForm" form=../_id }}
-            <button class="btn btn-info" style="float:right" type="button">Open</button>
-            {{/linkTo}}
-          </td>
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
+    {{debug}}
+    {{#if col}}
     {{> reactiveTable collection=col fields=fields}}
+    {{/if}}
   </div>
 </template>
-<template name="submissionsButtons">
+<template name="submissionsCellButtons">
   {{#linkTo route="updateForm" form=../_id }}
   <button class="btn btn-info" style="float:right" type="button">Open</button>
   {{/linkTo}}
