--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -2,40 +2,13 @@
   <div class="box">
     <div class="box-header with-border">
 
-      <h3 class="box-title">{{label title}}</h3>
+      <h3 class="box-title">{{title}}</h3>
       <span style="float:right">{{> breadcrumb}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Created by</th>
-            {{#each getSchema}}
-            <th>{{label .. this}}</th>
-            {{/each}}
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each items}}
-          <tr>
-            <td>
-              {{user createdBy}}
-            </td>
-            {{#each getSchema}}
-            <td>{{{cell .. this}}}</td>
-            {{/each}}
-            <td>
-              {{#linkTo route="updateAdminForm" form=../_id }}
-              <button class="btn btn-info" type="button">Admin</button>
-              {{/linkTo}}
-            </td>
-          </tr>
-          {{/each}}
-        </tbody>
-      </table>
-      {{> reactiveTable collection=col}}
-
+      {{#if col}}
+      {{> reactiveTable collection=col fields=fields}}
+      {{/if}}
     </div>
   </div>
 </template>
