more fixes to form list and admin views

--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -12,3 +12,9 @@
     </div>
   </div>
 </template>
+<template name="submissionsAdminCellButtons">
+  {{#linkTo route="updateForm" form=form }}
+  {{debug}}
+  <button class="btn btn-info" style="float:right" type="button">Open</button>
+  {{/linkTo}}
+</template>
