--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -13,8 +13,7 @@
   </div>
 </template>
 <template name="submissionsAdminCellButtons">
-  {{#linkTo route="updateForm" form=form }}
-  {{debug}}
+  {{#linkTo route="updateAdminForm" form=form }}
   <button class="btn btn-info" style="float:right" type="button">Open</button>
   {{/linkTo}}
 </template>
