--- a/app/packages/menus/client/templates/menu/list.html
+++ b/app/packages/menus/client/templates/menu/list.html
@@ -5,26 +5,12 @@
       <span style="float:right">{{#linkTo route="insertMenu"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Menu</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-    {{#each menus}}
-      <tr>
-        <td>{{title}}</td>
-        <td>
-          {{#linkTo route='editMenu'}}
-            <button class="btn btn-info" type="button">Edit</button>
-          {{/linkTo}}
-        </td>
-      </tr>
-    {{/each}}
-    </tbody>
-  </table>
+      {{> reactiveTable collection=col fields=fields}}
 </div>
 </div>
+</template>
+<template name="MenusListCellButtons">
+  {{#linkTo route='editMenu' form=this._id}}
+    <button class="btn btn-info" type="button">Edit</button>
+  {{/linkTo}}
 </template>
