--- a/app/packages/pages/client/templates/page/list.html
+++ b/app/packages/pages/client/templates/page/list.html
@@ -5,29 +5,12 @@
       <span style="float:right">{{#linkTo route="insertPage"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Page</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>title</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-    {{#each pages}}
-      <tr>
-        <td>{{title}}</td>
-        <td>
-          <span style="float:right">
-            {{#linkTo route='editPage'}}
-              <button class="btn btn-info" type="button">Edit</button>
-            {{/linkTo}}
-            {{> quickRemoveButton collection=getCol _id=this._id onSuccess=onSuccess class="btn btn-danger"}}
-          </span>
-        </td>
-      </tr>
-    {{/each}}
-    </tbody>
-  </table>
+      {{> reactiveTable collection=col fields=fields}}
+    </div>
 </div>
-</div>
+</template>
+<template name="PagesListCellButtons">
+  {{#linkTo route='editPage' form=this._id}}
+    <button class="btn btn-info" type="button">Edit</button>
+  {{/linkTo}}
 </template>
