fix admin for forms

--- a/app/packages/forms/client/templates/form/list.html
+++ b/app/packages/forms/client/templates/form/list.html
@@ -16,4 +16,7 @@
   {{#linkTo route='submissions' form=this._id}}
     <button class="btn btn-info" type="button">List Submissions</button>
   {{/linkTo}}
+  {{#linkTo route='submissionsCalendar' form=this._id}}
+    <button class="btn btn-info" type="button">Calendar</button>
+  {{/linkTo}}
 </template>
