diary beta rollout

--- a/app/packages/diary/client/templates/diary/list.html
+++ b/app/packages/diary/client/templates/diary/list.html
@@ -1,7 +1,7 @@
-<template name="TodayDiary">
+<template name="ListDiary">
   <div class="box">
     <div class="box-body">
-      {{> diary}}
+      {{> diaryList}}
     </div>
   </div>
 </template>
