--- a/app/packages/diary/client/templates/diary/list.html
+++ b/app/packages/diary/client/templates/diary/list.html
@@ -1,7 +1,16 @@
-<template name="ListDiary">
+<template name="diaryList">
   <div class="box">
     <div class="box-body">
-      {{> diaryList}}
+	  <div class="box">
+	    <div class="box-body table-responsive no-padding">
+	      {{> reactiveTable collection=col fields=fields}}
+	    </div>
+	  </div>
     </div>
   </div>
+</template>
+	<template name="DiaryListCellButtons">
+	  {{#linkTo route='viewDiary' form=this._id}}
+	    <button class="btn btn-info" type="button">Edit</button>
+	  {{/linkTo}}
 </template>
