--- a/app/packages/diary/client/templates/diary/admin.html
+++ b/app/packages/diary/client/templates/diary/admin.html
@@ -1,5 +1,8 @@
 <template name="diaryAdmin">
   <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">Diary admin</h3>
+   </div>
     <div class="box-body">
 	  <div class="box">
 	    <div class="box-body table-responsive no-padding">
