--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -2,8 +2,22 @@
   <div class="box">
     <div class="box-header with-border">
 
-      <h3 class="box-title">{{title}}</h3>
-      <span style="float:right">{{> breadcrumb}}</span>
+      <h3 class="box-title">Submissions admin - {{title}}</h3>
+      <ul class="box-header-list" style="float:right">
+        <li>
+          {{#linkTo route='submissions' form=currentForm}}
+            <button class="btn btn-info" style="margin-top: -27px;" type="button">List Submissions</button>
+          {{/linkTo}}
+        </li>
+        <li>
+          {{#linkTo route='submissionsAdminCalendar' form=currentForm}}
+            <button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin Calendar</button>
+          {{/linkTo}}
+        </li>
+        <li>
+          {{> breadcrumb}}
+        </li>
+      </ul>
     </div>
     <div class="box-body table-responsive no-padding">
       {{#if col}}
