--- a/app/packages/forms/client/templates/form/submissions/submit.html
+++ b/app/packages/forms/client/templates/form/submissions/submit.html
@@ -1,10 +1,17 @@
 <template name="submitForm">
   <div class="box">
     <div class="box-header with-border">
-      <h3 class="box-title">Submit form</h3>
-      <span style="float:right">
-      {{> breadcrumb}}
-      </span>
+      <h3 class="box-title">Submit form - {{title}}</h3>
+      <ul class="box-header-list" style="float:right">
+        <li>
+          {{#linkTo route='submissions' form=_id}}
+            <button class="btn btn-info" style="margin-top: -27px;" type="button">List Submissions</button>
+          {{/linkTo}}
+        </li>
+        <li>
+          {{> breadcrumb}}
+        </li>
+      </ul>
     </div>
     <div class="box-body table-responsive">
       {{#if destroyForm}}
