--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -26,7 +26,7 @@
         <td>{{#if status.online}}<i class="fa fa-circle text-success"></i> Online{{else}}<i class="fa fa-circle text-warning"></i> Offline{{/if}}</td>
         <td>{{profile.name}}</td>
         <td>{{code _id}}</td>
-        {{#if isInRole 'user-admin'}}
+        {{#if userIsInRole 'user-admin'}}
         <td>
           {{#linkTo route='editUser'}}
             <button class="btn btn-info" type="button">Edit</button>
@@ -46,7 +46,7 @@
         <td>
             <button class="btn btn-info chat" type="button">Chat</button>
         </td>
-        {{#if isInRole 'gmail-admin'}}
+        {{#if userIsInRole 'gmail-admin'}}
         <td>
             {{#linkTo route='mailList' user=_id}}
               <button class="btn btn-info" type="button">Gmail Messages</button>
