Padding fixes for any views

--- a/app/packages/accounts/client/templates/role/insert.html
+++ b/app/packages/accounts/client/templates/role/insert.html
@@ -3,7 +3,7 @@
     <div class="box-header with-border">
       <h3 class="box-title">Insert role</h3>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsive">
   {{> quickForm collection="Meteor.roles" id="insertRoleForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
 </div>
