--- a/app/packages/accounts/client/templates/user/edit.html
+++ b/app/packages/accounts/client/templates/user/edit.html
@@ -8,7 +8,7 @@
         <h2 class="btn btn-info setSignatureButton">Set signature</h2>
       {{/callable}}
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> quickForm collection="Meteor.users" doc=this id="profileUpdateForm" type="update" omitFields="createdAt" buttonContent="Save Changes"}}
     </div>
   </div>
