--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -6,7 +6,7 @@
       </h3>
     </div>
 
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
     {{#if users}}
       {{> reactiveTable collection=users fields=fields}}
     {{/if}}
