--- a/app/packages/forms/client/templates/form/list.html
+++ b/app/packages/forms/client/templates/form/list.html
@@ -4,7 +4,7 @@
       <h3 class="box-title">Forms</h3>
       <span style="float:right">{{#linkTo route="insertForm"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Form</button>{{/linkTo}}</span>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> reactiveTable collection=col fields=fields}}
 </div>
 </div>
