--- a/app/packages/gmail/client/templates/mail/labels.html
+++ b/app/packages/gmail/client/templates/mail/labels.html
@@ -8,7 +8,7 @@
           </button>
         </div>
       </div>
-      <div class="box-body no-padding">
+      <div class="box-bodysubmissionsAdminCalendar">
         <ul class="nav nav-pills nav-stacked">
           {{#each labels}}
           <li><a href="#"><i class="fa fa-circle-o text-light-blue"></i>{{name}}</a></li>
