--- a/app/packages/gmail/client/templates/mail/messages.html
+++ b/app/packages/gmail/client/templates/mail/messages.html
@@ -12,7 +12,7 @@
       <!-- /.box-tools -->
     </div>
     <!-- /.box-header -->
-    <div class="box-body no-padding">
+    <div class="box-bodysubmissionsAdminCalendar">
       <!--div class="mailbox-controls">
         <button type="button" class="btn btn-default btn-sm checkbox-toggle"><i class="fa fa-square-o"></i>
         </button>
@@ -44,7 +44,7 @@
       <!-- /.mail-box-messages -->
     </div>
     <!-- /.box-body -->
-    <!--div class="box-footer no-padding">
+    <!--div class="box-footersubmissionsAdminCalendar">
       <div class="mailbox-controls">
         <button type="button" class="btn btn-default btn-sm checkbox-toggle"><i class="fa fa-square-o"></i>
         </button>
