--- a/app/packages/pages/client/templates/page/list.html
+++ b/app/packages/pages/client/templates/page/list.html
@@ -4,7 +4,7 @@
       <h3 class="box-title">Pages</h3>
       <span style="float:right">{{#linkTo route="insertPage"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Page</button>{{/linkTo}}</span>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> reactiveTable collection=col fields=fields}}
     </div>
 </div>
