--- a/app/packages/accounts/client/templates/role/list.html
+++ b/app/packages/accounts/client/templates/role/list.html
@@ -4,7 +4,7 @@
       <h3 class="box-title">Roles</h3>
       <span style="float:right">{{#linkTo route="insertRole"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Role</button>{{/linkTo}}</span>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsive">
   <table class="table table-hover">
     <thead>
       <tr>
