--- a/app/packages/diary/client/templates/diary/admin.html
+++ b/app/packages/diary/client/templates/diary/admin.html
@@ -5,7 +5,7 @@
     </div>
     <div class="box-body">
 	  <div class="box">
-	    <div class="box-body table-responsive no-padding">
+	    <div class="box-body table-responsivesubmissionsAdminCalendar">
 	      {{> reactiveTable collection=col fields=fields}}
 	    </div>
 	  </div>
