--- a/app/packages/diary/client/templates/diary/list.html
+++ b/app/packages/diary/client/templates/diary/list.html
@@ -1,13 +1,9 @@
 <template name="diaryList">
-  <div class="box">
-    <div class="box-body">
 	  <div class="box">
-	    <div class="box-body table-responsive no-padding">
+	    <div class="box-body table-responsive">
 	      {{> reactiveTable collection=col fields=fields}}
 	    </div>
 	  </div>
-    </div>
-  </div>
 </template>
 	<template name="DiaryListCellButtons">
 	  {{#linkTo route='viewDiary' form=this._id}}
