--- a/app/packages/forms/client/templates/form/submissions/admin.html
+++ b/app/packages/forms/client/templates/form/submissions/admin.html
@@ -19,7 +19,7 @@
         </li>
       </ul>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{#if col}}
       {{> reactiveTable collection=col fields=fields}}
       {{/if}}
