--- a/app/packages/gmail/client/templates/mail/messageView.html
+++ b/app/packages/gmail/client/templates/mail/messageView.html
@@ -10,7 +10,7 @@
             </div>
             <!-- /.box-header -->
             {{debug message}}
-            <div class="box-body no-padding">
+            <div class="box-bodysubmissionsAdminCalendar">
               <div class="mailbox-read-info">
                 <h3>{{message.subject}}</h3>
                 <h5>From: {{message.from}}
