--- a/app/packages/menus/client/templates/menu/insert.html
+++ b/app/packages/menus/client/templates/menu/insert.html
@@ -3,7 +3,7 @@
     <div class="box-header with-border">
       <h3 class="box-title">Insert Menu</h3>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
