--- a/app/packages/pages/client/templates/page/edit.html
+++ b/app/packages/pages/client/templates/page/edit.html
@@ -17,7 +17,7 @@
       <h4>Widgets</h4>
       {{#linkTo route="insertWidget" parent=page._id}}<i class="fa fa-plus"></i> New Widget{{/linkTo}}
       <div class="box">
-        <div class="box-body table-responsive no-padding">
+        <div class="box-body table-responsivesubmissionsAdminCalendar">
 
           <table id="items" class="table table-hover">
             <thead>
