server side scribtion management for user list

--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -8,7 +8,7 @@
 
     <div class="box-body table-responsivesubmissionsAdminCalendar">
     {{#if users}}
-      {{> reactiveTable collection=users fields=fields}}
+      {{> reactiveTable collection="tableUsers" fields=fields}}
     {{/if}}
     </div>
 </div>
