reactive publishing for non admin forms

--- a/app/packages/forms/client/templates/form/submissions/submissions.html
+++ b/app/packages/forms/client/templates/form/submissions/submissions.html
@@ -20,7 +20,7 @@
       </ul>
     </div>
     {{#if col}}
-    {{> reactiveTable collection=col fields=fields}}
+    {{> reactiveTable collection=currentForm fields=fields}}
     {{/if}}
   </div>
 </template>
