gmail time display, publishing fix for screen load

--- a/app/packages/gmail/client/templates/mail/messages.html
+++ b/app/packages/gmail/client/templates/mail/messages.html
@@ -74,7 +74,7 @@
     <td class="mailbox-name">{{#linkTo route="mailMessageView"}} {{from}} {{/linkTo}}</td>
     <td class="mailbox-subject">{{subject}}</td>
     <td class="mailbox-attachment"></td>
-    <td class="mailbox-date">5 mins ago</td>
+    <td class="mailbox-date">{{date}}</td>
     {{/with}}
   </tr>
 </template>
