--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -6,7 +6,11 @@
       </h3>
     </div>
 
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-body">
+    {{#callable name="changeAllPw" userId=_id}}
+      <button class="btn btn-info" type="button">Force Change All Passwords</button>
+    {{/callable}}
+
     {{#if users}}
       {{> reactiveTable collection="tableUsers" fields=fields}}
     {{/if}}
